fix(ui): overflowed list does not have a gradient once unfolded

--- a/themes/detour/assets/css/critical.css
+++ b/themes/detour/assets/css/critical.css
@@ -171,6 +171,9 @@ ul {
     width: 100%;
     z-index: 10;
   }
+  .overflow-y:target::after {
+    display: none;
+  }
 
 .overflow-y:target {
   height: auto;
